--- a/files/main.css
+++ b/files/main.css
@@ -3224,7 +3224,12 @@ body.modal-open {overflow: hidden}
 }
 /* Купон */
 .coupon {position: relative;    margin-bottom: 30px;}
-.coupon .coupon__clear {position: absolute;display: flex;align-items: center;z-index: 1;font-size: 26px;top: 0;right: 105px;height: 100%;padding: 0 10px;cursor: pointer;opacity: 0;visibility: hidden;-webkit-transition: all .3s;transition: all .3s;color: #898989;}
+.coupon .input {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right: 0;
+}
+.coupon .coupon__clear {position: absolute;display: flex;align-items: center;z-index: 1;font-size: 26px;top: 0;right: 0;height: 100%;padding: 0 10px;cursor: pointer;opacity: 0;visibility: hidden;-webkit-transition: all .3s;transition: all .3s;color: #898989;}
 .coupon .coupon__clear._active {opacity: 1;visibility: visible}
 .coupon .coupon__clear._active:hover .icon {
   fill: #607d8b;
@@ -3234,12 +3239,12 @@ body.modal-open {overflow: hidden}
 .coupon .coupon__input {max-width: 100%;height: 40px;padding-left: 10px;padding-right: 70px}
 .coupon .coupon__label {display: block;margin-bottom: 15px;font-size: 16px}
 .coupon .coupon__btn {
-  position: absolute;
+  position: static;
   z-index: 1;
   top: 0;
   right: 0;
   width: auto;
-  height: 100%;
+  height: auto;
   padding: 0 10px;
   
   color: #fff;
@@ -3258,7 +3263,7 @@ body.modal-open {overflow: hidden}
 .coupon .coupon__btn .icon {fill: #fff;width: 18px;margin: auto}
 
 @media all and (max-width: 576px){
-  .coupon .coupon__clear {right:55px;}
+  .coupon .coupon__clear {right:0;}
 }
 
 /*** Caps lock ***/
